[package]
name = "auto-registry"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/ef3d0c3e/auto-registry"
description = "Automatic registration using proc macros"
readme = "README.md"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }
